tests/base/valid/BoolAssign_Valid_1.whiley
import * from whiley.lang.*

void ::main(System.Console sys,[string] args):
    x = true
    sys.out.println(x)
    x = false
    sys.out.println(x)
